--- a/workspace_htmlcss/css/practice/practice_2.css
+++ b/workspace_htmlcss/css/practice/practice_2.css
@@ -12,8 +12,11 @@ body{
 
 .container{
   width: 350px;
-  border: 1px solid green;
-  padding-left: ;
+  border: 1px solid rgb(153, 153, 153);
+  border-radius: 8px;
+  box-shadow: 1px 1px 1px 0.2px rgb(145, 145, 145);
+  background-color: white;
+  overflow: hidden;
 }
 
 .img-div > img{
@@ -21,23 +24,30 @@ body{
   height: 200px;
   object-fit: cover;
   object-position: center center;
+  transition: all 1s;
+  
+}
+
+.img-div > img:hover {
+  scale: 1.1;
 }
 
 .detail{
   padding-left: 6px;
+  padding-right: 6px;
 }
 
 .roomtype{
   display: flex;
   justify-content: space-around;
-  border-bottom: 1px solid grey;
-  border-top: 1px solid grey;
+  border-bottom: 1px solid rgb(221, 221, 221);
+  border-top: 1px solid  rgb(221, 221, 221);
   margin-top: 10px;
   margin-bottom: 10px;
 }
 
 .roomtype > div{
-  margin: 11px 0px;
+  margin: 17px 0px;
 }
 
 .header > h2{
@@ -51,7 +61,40 @@ body{
 }
 
 
-.footer > img{
-  width: 50px;
+.footer > div > img{
+  width: 60px;
+  height: 60px;
+  object-fit: cover;
+  object-position: center center;
+  border-radius: 50%;
+  border: 1px solid rgb(219, 218, 218)
 }
 
+.footer > div:nth-child(2) {
+  display: flex;
+  gap: 6px; 
+  align-items: center;
+  margin: 6px 6px;
+}
+
+button{
+  background-color: rgb(53, 221, 165);
+  border: none;
+  width: 100;
+  height: 30px;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-left: auto;
+  color: white;
+  
+  
+}
+
+button:hover{
+  background-color:rgb(39, 165, 123) ;
+}
+
+.footer span{
+  font-weight: 600;
+}
+  
