--- a/workspace_htmlcss/css/practice/practice3.css
+++ b/workspace_htmlcss/css/practice/practice3.css
@@ -52,11 +52,39 @@ body{
 display: flex;
 flex-direction: column;
 position: absolute;
-top: 0px;
+top : 50%; left: 50%;
+transform: translate(-50% , -50%);
 background-color: rgba(0, 0, 0, 0.3);
 color: white;
+padding: 20px 50px;
+border-radius: 4px;
+}
+
+.main >div > h2 {
+  margin-bottom: 10px;
 }
 
 img{
   display: block;
 }
+
+.content{
+  /* display: flex; */
+  height: 200px;
+  /* border: 1px solid blue; */
+
+}
+
+.content-1{
+  display: flex;
+  border: 1px solid blue;
+
+}
+
+
+/* .content img{
+  width: 340px;
+  height: 100%;
+  object-fit: cover;
+  object-position: center center;
+} */
