--- a/workspace_spring/DataPractice/src/main/resources/templates/input_score.html
+++ b/workspace_spring/DataPractice/src/main/resources/templates/input_score.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>input score</title>
+  <title>first</title>
 </head>
 <body>
- <form action="/input_program" method="post">
-    <h4>학생 성적 입력 프로그램</h4>
+  <h4>학생 성적 입력 프로그램</h4>
+  <form action="/input_program" method="post">
     <div>
-      이름 <input type="text" name="name"> 
+      이름  <input type="text"  placeholder="이름을 입력하세요." name="name"> 
       <input type="submit" value="확인">
     </div>
  </form>
