--- a/workspace_spring/ListPractice/src/main/resources/templates/board_detail.html
+++ b/workspace_spring/ListPractice/src/main/resources/templates/board_detail.html
@@ -62,10 +62,10 @@
     const result = confirm('해당 게시물을 삭제 하시겠습니까?');
     
     //확인을 클릭했을 때만 삭제를 위해 자바로 이동
-    if(result){
-      // location.href='/delete?boardNum='+boardNum;   //''안은 문자열로 인식하기 때문에! 
-      location.href=`/delete?boardNum=${boardNum}`;   // ` 빽틱? 안에는  ${변수명} 로 변수 인식 가능
-    }
+    // if(result){
+    //   // location.href='/delete?boardNum='+boardNum;   //''안은 문자열로 인식하기 때문에! 
+    //   location.href=`/delete?boardNum=${boardNum}`;   // ` 빽틱? 안에는  ${변수명} 로 변수 인식 가능
+    // }
     
   }
   </script>
