--- a/workspace_spring/ListPractice/src/main/resources/templates/student_detail.html
+++ b/workspace_spring/ListPractice/src/main/resources/templates/student_detail.html
@@ -46,7 +46,7 @@
       // history.back(-1);   //한 페이지 전
       
       //또는 주소 집적입력
-      location.href('/stu_list');
+      location.href='/stu_list';
 
     }
 
