--- a/workspace_spring/ListPractice/src/main/resources/templates/update_student.html
+++ b/workspace_spring/ListPractice/src/main/resources/templates/update_student.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  
 </head>
 <body>
   <form action="/reg_update" method="post">
@@ -24,7 +25,7 @@
         <tr>
           <td>자기소개</td>
           <td colspan="3">
-            <textarea name=""cols="30" rows="10">[[${student.introduce}]]</textarea>
+            <textarea name="introduce"cols="30" rows="10">[[${student.introduce}]]</textarea>
           </td>
         </tr>
       </table>
