--- a/workspace_spring/DB_Score/src/main/resources/templates/stu_list.html
+++ b/workspace_spring/DB_Score/src/main/resources/templates/stu_list.html
@@ -4,7 +4,23 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="/reset.css">
 </head>
+<style>
+  tr,td{
+    border: 1px solid black;
+  }
+  td{
+    padding: 5px;
+    text-align: center;
+  }
+
+  .btn-input{
+    margin: 5px;
+  }
+
+
+</style>
 <body>
   <form action="/writeForm" method="post">
     <table>
@@ -30,7 +46,7 @@
         </tr>
        </th:block>
     </table>
-    <input type="submit" value="학생등록">
+    <div class="btn-input"><input type="submit" value="학생등록"></div>
   </form>
 </body>
 </html>
