--- a/workspace_spring/DB_Score/src/main/resources/templates/write_form.html
+++ b/workspace_spring/DB_Score/src/main/resources/templates/write_form.html
@@ -10,19 +10,19 @@
     <table>
       <tr>
         <td>학번</td>
-        <td><input type="text" name="stuNum" value=""></td>
+        <td><input type="text" name="stuNum" ></td>
       </tr>
       <tr>
         <td>이름</td>
-        <td><input type="text" name="stuName" value=""></td>
+        <td><input type="text" name="stuName" ></td>
       </tr>
       <tr>
         <td>수학점수</td>
-        <td><input type="text" name="korScore" value=""></td>
+        <td><input type="text" name="korScore" ></td>
       </tr>
       <tr>
         <td>영어점수</td>
-        <td><input type="text" name="engScore" value=""></td>
+        <td><input type="text" name="engScore"></td>
       </tr>
       <tr>
         <td>학생소개</td>
