--- a/workspace_spring/DB_Score/src/main/resources/templates/stu_update.html
+++ b/workspace_spring/DB_Score/src/main/resources/templates/stu_update.html
@@ -4,6 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="/reset.css">
+  <style>
+    td{
+      padding: 5px;
+      text-align: center;
+    }
+ 
+  </style>
 </head>
 <body>
   <form action="/DBupdate" method="post">
@@ -22,7 +30,7 @@
       </tr>
       <tr>
         <td>자기소개</td>
-        <td colspan="3"><textarea name="intro"  cols="30" rows="10">[[${student.intro}]]</textarea></td>
+        <td colspan="3"><textarea name="intro">[[${student.intro}]]</textarea></td>
       </tr>
     </table>
     <input type="hidden" name="stuNum" th:value="${student.stuNum}">
