--- a/workspace_spring/BasicBoard/src/main/resources/templates/b_write_form.html
+++ b/workspace_spring/BasicBoard/src/main/resources/templates/b_write_form.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="/reset.css">
 </head>
 <body>
     <form action="/reg_board" method="post">
@@ -14,11 +15,11 @@
         </colgroup>
         <tr>
           <td>제목</td>
-          <td><input type="text" name="bTitle"></td>
+          <td><input type="text" name="bTitle" required></td>
         </tr>
         <tr>
           <td>작성자</td>
-          <td><input type="text" name="bWriter"></td>
+          <td><input type="text" name="bWriter" required></td>
         </tr>
         <tr>
           <td>내용</td>
