--- a/7월 9일 평가대비/html+css/first.css
+++ b/7월 9일 평가대비/html+css/first.css
@@ -46,6 +46,7 @@ body{
   position: absolute;
   top:4px; 
   right: 4px;
+  color: orange;
 }
 
 .main{
@@ -78,7 +79,7 @@ body{
   color: white;
   letter-spacing: 1px;
   font-weight: 100;
-  line-height: 20px;
+  line-height: 23px;
   margin-top: 15px;
   font-size: 1.2rem;
 }
@@ -99,16 +100,18 @@ body{
 }
 
 .icon1  i{
-  border: 15px solid orange;
+  border: 20px solid orange;
   border-radius: 50%;
-  padding: 15px;
+  padding: 25px;
+  color: orange;
 }
 
 .icon-div div{
-  margin-top: 50px;
+  margin-top: 80px;
   font-size: 0.8rem;
   font-weight: 600;
   margin-bottom: 10px;
+  line-height:20px;
 }
 
 .icon-div p{
@@ -135,7 +138,7 @@ body{
 .icon-div{
   display: flex;
   justify-content: center;
-  gap: 150px;
+  gap: 50px;
   position: relative;
 
 }
