--- a/7월 9일 평가대비/html+css/third.css
+++ b/7월 9일 평가대비/html+css/third.css
@@ -1,16 +1,15 @@
-/* 
-.container{
+body{
   margin: auto;
-  font-weight: bold;
-} */
+}
 
-.wrap{
-  margin: auto;
+.container{
+  width:800px;
+ 
 }
 
 body>div{
   font-weight: bold;
-  margin: auto;
+
   margin-top: 30px;
   margin-bottom: 10px;
   
