--- a/7월 9일 평가대비/html+css/first.css
+++ b/7월 9일 평가대비/html+css/first.css
@@ -42,6 +42,11 @@ body{
 
 }
 
+.header-input >input:focus{
+  border-color: orange;
+  outline: none;
+}
+
 .header-input i {
   position: absolute;
   top:4px; 
@@ -104,6 +109,7 @@ body{
   border-radius: 50%;
   padding: 25px;
   color: orange;
+  font-size: 25px;
 }
 
 .icon-div div{
