--- a/workspace_react/board_exam/src/App.css
+++ b/workspace_react/board_exam/src/App.css
@@ -37,41 +37,47 @@
   }
 }
 
-
-.blog-navi{
-  display: flex;
-  background-color: lightsalmon;
-  color: white;
-  padding-left: 20px;
-  font-size: 1.2rem;
+.container{
+  width: 500px;
+  margin: 0 auto;
+  margin-top: 30px;
 }
 
-.list{
-  text-align: left;
-  padding-left: 20px;
-  border-bottom: 1px solid grey;
-  border-color: lightsalmon;
+table {
+  border: 1px solid black;
+  width: 100%;
+  border-collapse: collapse;
+  text-align: center;
 }
 
-.btn{
-  margin-top: 10px;
-  border-color: bisque;
-  background-color: bisque;
-  padding: 5px;
-  margin-right: 5px;
+thead{
+  background-color: lightpink;
+}
+
+tr,td{
+  border: 1px solid rgb(223, 222, 222);
+}
+
+td{
+  padding: 6px;
+}
+
+td:nth-child(1){
+  width: 15%;
+}
+
+td:nth-child(3){
+  width: 30%;
 }
 
 .detail{
-  margin-top: 100px;
-  background-color: rgb(252, 202, 182);
   text-align: left;
-  padding: 20px;
-  font-size: 1.1rem;
-  width: 500px;
-  height: 300px;
-  margin-left: 10px;
+  width: 100%;
+  background-color: lavenderblush;
+  padding: 10px;
+  margin-top: 20px;
 }
 
-.list span:hover{
+span:hover{
   cursor: pointer;
 }
