--- a/workspace_spring/BoardPractice/src/main/resources/templates/write_form.html
+++ b/workspace_spring/BoardPractice/src/main/resources/templates/write_form.html
@@ -21,7 +21,7 @@
         <td><textarea name="content" cols="30" rows="10"></textarea></td>
       </tr>
     </table>
-    <input type="hidden" name="pNum" th:value="[[${board.bNum}]]">
+    <input type="hidden" name="pNum" th:value="[[${board.pNum}]]">
     <input type="submit" value="등록하기">
   </form>
 
