--- a/workspace_spring/BoardPractice/src/main/resources/templates/detail.html
+++ b/workspace_spring/BoardPractice/src/main/resources/templates/detail.html
@@ -6,29 +6,31 @@
   <title>Document</title>
 </head>
 <body>
-  <table>
-    <tr>
-      <td>제목</td>
-      <td>[[${board.title}]]</td>
-      <td>조회수</td>
-      <td>[[${board.readCnt}]]</td>
-    </tr>
-    <tr>
-      <td>작성자</td>
-      <td>[[${board.writer}]]</td>
-      <td>날짜</td>
-      <td>[[${board.pDate}]]</td>
-    </tr>
-    <tr>
-      <td>내용</td>
-      <td><textarea name="content" cols="30" rows="10">
-        [[${board.content}]]
-      </textarea></td>
-    </tr>
-  </table>
-  <input type="button" value="뒤로가기" onclick="goBack()">
-  <input type="submit" value="수정하기">
-  <input type="button" value="삭제하기" th:onclick="goDelete([[${board.pNum}]])">
+
+    <table>
+      <tr>
+        <td>제목</td>
+        <td>[[${board.title}]]</td>
+        <td>조회수</td>
+        <td>[[${board.readCnt}]]</td>
+      </tr>
+      <tr>
+        <td>작성자</td>
+        <td>[[${board.writer}]]</td>
+        <td>날짜</td>
+        <td>[[${board.pDate}]]</td>
+      </tr>
+      <tr>
+        <td>내용</td>
+        <td><textarea name="content" cols="30" rows="10">
+          [[${board.content}]]
+        </textarea></td>
+      </tr>
+    </table>
+    <input type="button" value="뒤로가기" onclick="goBack()">
+    <input type="submit" value="수정하기">
+    <input type="button" value="삭제하기" th:onclick="goDelete([[${board.pNum}]])">
+
 
 
   <script>
@@ -37,8 +39,8 @@
     }
 
     function goDelete(pNum){
-      location.href='/pDelete'
-    }
+      location.href=`/pDelete?pNum=${pNum}`
+  }
   </script>
 
 </body>
