--- a/workspace_spring/BoardPractice/src/main/resources/templates/detail.html
+++ b/workspace_spring/BoardPractice/src/main/resources/templates/detail.html
@@ -7,29 +7,35 @@
 </head>
 <body>
 
-    <table>
-      <tr>
-        <td>제목</td>
-        <td>[[${board.title}]]</td>
-        <td>조회수</td>
-        <td>[[${board.readCnt}]]</td>
-      </tr>
-      <tr>
-        <td>작성자</td>
-        <td>[[${board.writer}]]</td>
-        <td>날짜</td>
-        <td>[[${board.pDate}]]</td>
-      </tr>
-      <tr>
-        <td>내용</td>
-        <td><textarea name="content" cols="30" rows="10">
-          [[${board.content}]]
-        </textarea></td>
-      </tr>
-    </table>
-    <input type="button" value="뒤로가기" onclick="goBack()">
-    <input type="submit" value="수정하기">
-    <input type="button" value="삭제하기" th:onclick="goDelete([[${board.pNum}]])">
+    <form action="/pUpdate" method="post">
+      <table>
+        <tr>
+          <td>제목</td>
+          <td>[[${board.title}]]</td>
+          <td>조회수</td>
+          <td>[[${board.readCnt}]]</td>
+        </tr>
+        <tr>
+          <td>작성자</td>
+          <td>[[${board.writer}]]</td>
+          <td>날짜</td>
+          <td>[[${board.pDate}]]</td>
+        </tr>
+        <tr>
+          <td>내용</td>
+          <td><textarea name="content" cols="30" rows="10">
+            [[${board.content}]]
+          </textarea></td>
+        </tr>
+      </table>
+      <input type="hidden" name="pNum" th:value="${board.pNum}">
+      <input type="hidden" name="title" th:value="${board.title}" >
+      <input type="hidden" name="writer" th:value="${board.writer}" >
+      <input type="hidden" name="pDate" th:value="${board.pDate}" >
+      <input type="button" value="뒤로가기" onclick="goBack()">
+      <input type="submit" value="수정하기">
+      <input type="button" value="삭제하기" th:onclick="goDelete([[${board.pNum}]])">
+    </form>
 
 
 
