--- a/7월 9일 평가대비/20240709_대시보드를 위한Modern UI_김현경/first.css
+++ b/7월 9일 평가대비/20240709_대시보드를 위한Modern UI_김현경/first.css
@@ -45,6 +45,7 @@ body{
 .header-input >input:focus{
   border-color:rgb(184, 184, 184);
   outline: none;
+  caret-color:rgb(184, 184, 184);
   
 }
 
