--- a/workspace_react/db_board/src/App.css
+++ b/workspace_react/db_board/src/App.css
@@ -2,37 +2,44 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.write-btn{
+  border: none;
+  padding: 5px;
+  width: 70px;
+  border-radius: 10px;
+  background-color: rgb(103, 196, 103);
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.write-btn:hover{
+  cursor: pointer;
+  background-color: rgb(90, 173, 90);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.list-table{
+  border-collapse: collapse;
+  margin-bottom: 15px;
+}
+
+thead{
+  background-color: rgb(207, 243, 255);
+}
+
+.insert-table{
+  border-collapse: collapse;
+  margin: auto;
+  margin-bottom: 15px;
+  text-align: center;
+}
+
+
+
+.insert-table tr,td{
+  border: 1px solid silver;
+  
+}
+
+.title-sp:hover{
+  cursor: pointer;
+  color: grey;
 }
