--- a/workspace_spring/ReactGoods/src/main/goods/src/App.css
+++ b/workspace_spring/ReactGoods/src/main/goods/src/App.css
@@ -1,10 +1,12 @@
 .App {
   text-align: center;
+  width: 100vw;
+  height: 100vh;
 }
 
 
 .header{
-  width: 600px;
+  width: 1200px;
   margin: auto;
   padding: 20px;
   background-color: rgb(255, 98, 121);
@@ -24,7 +26,7 @@ a{
 }
 
 .content{
-  width: 600px;
+  width: 1200px;
   margin: auto;
   margin-top: 15px;
 }
@@ -33,9 +35,16 @@ h3{
   text-align: left;
 }
 
+.item{
+  display: flex;
+  gap: 100px;
+}
+
+
+
 .item-table{
   margin: auto;
-  width: 80%;
+  width: 700px;
   margin-top: 20px;
   border: 1px solid pink;
   text-align: center;
@@ -47,8 +56,8 @@ thead{
 }
 
 .detail-table{
+  width: 400px;
   margin: auto;
-  width: 80%;
   text-align: center;
 }
 
