--- a/workspace_spring/Board/src/main/frontend/src/App.css
+++ b/workspace_spring/Board/src/main/frontend/src/App.css
@@ -17,6 +17,8 @@ h2{
   text-align: center;
 }
 
+
+
 /* login , join flex */
 .login-div{
   width: 100%;
@@ -35,7 +37,7 @@ h2{
   align-self: self-end;
 }
 
-/* 목록테이블 */
+/* 목록 테이블 크기, 색상, 바디 색상*/
 .table{
   margin-top: 25px;
   width:100%;
@@ -56,14 +58,20 @@ tbody{
   background-color: rgb(255, 222, 211);
 }
 
+/* 테이블 안쪽 여백 늘리기 */
 tr,td{
-  padding: 10px
+  padding: 8px
 }
 
+/* 인풋 높이 조절 */
+input{
+  height: 25px;
+}
+
+/* 스판, 버튼 클릭 시 커서 포인트 */
 button:hover{
   cursor: pointer;
 }
-
 
 span:hover{
   cursor: pointer;
@@ -77,14 +85,66 @@ span:hover{
 
 }
 
-.btn, .list-btn{
+.list-btn{
   border:none;
   border-radius: 10px;
   padding: 10px;
-  margin-right: 15px;
+  margin: 0px 5px;
+}
+
+.btn{
+  padding: 5px;
+  margin: 0px 5px;
+}
+
+.joinbtn{
+  padding: 5px;
+  width: 100px;
+  margin: 0px 5px;
+  font-size: 15px;
 }
 
 .list-btn{
   background-color:lightsalmon;
   color: white;
 }
+
+/* 아이디 중복 검사 버튼 */
+.checkBtn{
+  margin-left: 5px;
+  height: 25px;
+}
+
+
+/* detail btn */
+.detail-btn{
+  display: flex;
+  display: block;
+  margin-top: 25px;
+  
+}
+
+.detail-btn > button:nth-child(2) {
+  margin: 0px 5px;
+}
+
+/* detail, update 공통 */
+.detail-div{
+  margin-top: 25px;
+  width: 100%;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+
+}
+
+.update-input{
+  width: 206px;
+}
+
+.update-div{
+  /* border: 1px solid red; */
+  margin-top: 25px;
+  margin-bottom: 25px;
+}
+
