--- a/workspace_spring/Board/src/main/frontend/src/App.css
+++ b/workspace_spring/Board/src/main/frontend/src/App.css
@@ -15,7 +15,8 @@
 }
 
 h2{
-  text-align: center;;
+  text-align: center;
+  letter-spacing: 5px;
 }
 
 .namespan{
@@ -149,6 +150,7 @@ span:hover{
 
 }
 
+
 .update-input{
   width: 206px;
 }
@@ -178,12 +180,40 @@ span:hover{
 }
 
 
-/* test
-
-.id,.pw,.pwchk,.name,.gender{
-  margin-bottom: 15px;
+/* 디테일 관련 css */
+.reply-div{
+  margin-top: 30px;
   width: 100%;
   display: flex;
+  flex-direction: column;
   align-items: center;
-  gap: 15px;
-} */
+}
+
+.reply-div > h3{
+  margin-bottom: 10px;
+  background-color: rgb(143, 143, 143);
+  letter-spacing: 10px;
+}
+
+.reply-content{
+  border-bottom: 2px solid rgb(112, 112, 112);
+  margin-bottom: 20px;
+}
+
+.reply-content > div:nth-child(2){
+  margin-bottom: 10px;
+}
+
+.detail-table{
+  /* border: 1px solid; */
+  width: 100%;
+}
+
+
+/* 댓글 작성 버튼 위치 조정 */
+.reply-btn{
+margin-bottom: 10px;
+margin-left: 10px
+}
+
+
