--- a/workspace_spring/Shop/src/main/frontend/src/App.css
+++ b/workspace_spring/Shop/src/main/frontend/src/App.css
@@ -1,40 +1,36 @@
 
-/* color
-#EEEDEB
-#E6B9A6
-#939185
-#2F3645
-*/
-
 .container{
   width: 100vw;
   height: 100vh;
-  font-size: 18px;
+  font-size: 17px;
 }
 
+/* 로그인과 조인 글자  */
 .login-div{
   width: 100%;
-  /* color: rgb(0, 0, 0); */
   color: rgb(255, 255, 255);
-  /* background-color: rgb(233, 230, 230); */
-  background-color: #2F3645;
+  background-color: rgb(0, 0, 0);
 }
 
+/* 로그인과 조인 글자 */
 .header{
   display: flex;
   justify-content: right;
   gap: 20px;
-  font-size: 20px;
+  font-size: 16px;
   margin-right: 25px;
-  
-  /* border: 1px solid red; */
 }
 
+.header > span:hover{
+  font-weight: bolder;
+}
+
+/* 배너 이미지 */
 .banner-img{
   width: 100%;
-  height: 180px;
+  height: 200px;
   object-fit:cover ;
-  object-position:bottom;
+  object-position:center;
   display: block;
 }
 
@@ -48,10 +44,10 @@
   transform: translate(30pxm, -50%);
   margin-left: 10px;
   font-weight: bold;
-  font-size: 2rem;
+  font-size: 1.8rem;
   /* color: rgb(233, 230, 230); */
-  color: rgb(253, 248, 248);
-  letter-spacing: 10px;
+  color: rgb(255, 255, 255);
+  letter-spacing: 6px;
   
 }
 
@@ -67,15 +63,17 @@ span:hover, button:hover, select:hover{
 }
 
 button{
-  font-size: 15px; 
+  font-size: 14px; 
   /* border: none; */
   border-radius: 5px;
   letter-spacing: 1px;
 }
+
+
 input{
   width: 500px;
   padding: 8px;
-  font-size: 15px;
+  font-size: 14px;
   border-radius: 5px;
   border: 1px solid lightgray;
 }
@@ -89,3 +87,56 @@ input:focus, select:focus{
   outline: none;
   border-color: rgb(141, 141, 141);
 }
+
+
+/* 모달창 만들기 */
+.modal-container{
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  background-color: RGBA(0,0,0,0.5);
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  z-index: 99;
+}
+
+.modal-container > .modal{
+  width: 500px;
+  padding: 25px;
+  background-color: white;
+  margin-top: 23rem;
+  border-radius: 15px;
+}
+
+.modal-header{
+  text-align: right;
+}
+
+.modal-header > span{
+  cursor: pointer;
+}
+
+.modal-content{
+  border-bottom: 1px solid rgb(151, 151, 151);
+  margin-bottom: 10px;
+  margin-top: 10px;
+  text-align: center;
+}
+
+
+.modal-footer{
+  margin-bottom: 10px;
+  text-align: right;
+}
+
+.modal-footer > button{
+  margin-top: 10px;
+  border: none;
+  width: 100px;
+  padding: 5px;
+}
+
+/* 모달 애니메이션 정의 */
