--- a/workspace_spring/Shop/src/main/frontend/src/pages/user/Login.css
+++ b/workspace_spring/Shop/src/main/frontend/src/pages/user/Login.css
@@ -1,13 +1,20 @@
 
 .logintable{
-  margin-top: 30px;
+  margin-top: 50px;
+
 }
 
 .logintable input{
   width: 300px;
 }
 
-.login-btn{
-  margin-top: 20px;
+.loginbtn-div{
+  margin-top: 50px;
   text-align: center;
+}
+
+.login-btn{
+  border: none;
+  padding: 8px;
+  width: 100px;
 }
