--- a/workspace_spring/Shop_answer/src/main/frontend_answer/src/App.css
+++ b/workspace_spring/Shop_answer/src/main/frontend_answer/src/App.css
@@ -1,22 +1,142 @@
+
 .container{
-  border: 1px solid black;
   width: 100vw;
+  height: 100vh;
+  font-size: 17px;
 }
 
-.header{
-  width: 100%;
-  color: white;
-  background-color: black;
-}
-
+/* 로그인과 조인 글자  */
 .login-div{
+  width: 100%;
+  color: rgb(255, 255, 255);
+  background-color: rgb(0, 0, 0);
+}
+
+/* 로그인과 조인 글자 */
+.header{
   display: flex;
   justify-content: right;
-  gap: 15px;
+  gap: 20px;
+  font-size: 16px;
+  margin-right: 25px;
+}
+
+.header > span:hover{
+  font-weight: bolder;
+}
+
+/* 배너 이미지 */
+.banner-img{
+  width: 100%;
+  height: 200px;
+  object-fit:cover ;
+  object-position:center;
+  display: block;
+}
+
+.banner{
+  position: relative;
+}
+
+.title-div{
+  position: absolute;
+  top: 50%;
+  transform: translate(30pxm, -50%);
+  margin-left: 10px;
+  font-weight: bold;
+  font-size: 1.8rem;
+  /* color: rgb(233, 230, 230); */
+  color: rgb(206, 230, 211);
+  letter-spacing: 6px;
+  
 }
 
 .layout-div{
-  width: 86%;
-  border: 1px solid red;
-  margin: 0 auto;
+  width: 80%;
+  height: 100%;
+  /* border: 1px solid red; */
+  margin: 0px auto;
 }
+
+span:hover, button:hover, select:hover{
+  cursor: pointer;
+}
+
+button{
+  font-size: 14px; 
+  /* border: none; */
+  border-radius: 5px;
+  letter-spacing: 1px;
+}
+
+
+input{
+  width: 500px;
+  padding: 8px;
+  font-size: 14px;
+  border-radius: 5px;
+  border: 1px solid lightgray;
+}
+
+select{
+  border: 1px solid lightgray;
+  border-radius: 5px;
+}
+
+input:focus, select:focus{
+  outline: none;
+  border-color: rgb(141, 141, 141);
+}
+
+
+/* 모달창 만들기 */
+.modal-container{
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  background-color: RGBA(0,0,0,0.5);
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  z-index: 99;
+}
+
+.modal-container > .modal{
+  width: 500px;
+  padding: 25px;
+  background-color: white;
+  margin-top: 23rem;
+  border-radius: 15px;
+}
+
+.modal-header{
+  text-align: right;
+}
+
+.modal-header > span{
+  cursor: pointer;
+}
+
+.modal-content{
+  border-bottom: 1px solid rgb(151, 151, 151);
+  margin-bottom: 10px;
+  margin-top: 10px;
+  text-align: center;
+}
+
+
+.modal-footer{
+  margin-bottom: 10px;
+  text-align: right;
+}
+
+.modal-footer > button{
+  margin-top: 10px;
+  border: none;
+  width: 100px;
+  padding: 5px;
+}
+
+/* 모달 애니메이션 정의 */
